@@ -42,7 +42,7 @@ $index = 0;
 <div class="view-item view-item-<?php print $view->name ?>">
   <div class="calendar monthview">
     <?php print theme('calendar_stripe_stripe', $node); ?>
-    <div id="<?php print $node->date_id ?>" class="contents">
+    <div class="<?php print $node->date_id ?> contents">
       <?php foreach ($fields as $field): ?>
         <?php if ($index++ == 0 && (isset($node->continuation) && $node->continuation)) : ?>
         <div class="continuation">&laquo;</div>
